--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
@@ -28,6 +29,7 @@ android {
 
 repositories {
     mavenCentral()
+    google()
 }
 
 dependencies {
